# gsplat-pixi-cuda11.8

./: pixi.toml
colmap_dataset_20251015_003308/sparse/camera/: cameras.txt  images.txt
gsplat/examples/: custom_trainer.py  simple_viewer.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/GSImageSampler/lib/GSImageSampler/: kimm_sampler  sampler
ros2_ws/install/GSImageSampler/share/GSImageSampler/: package.dsv  package.sh
ros2_ws/install/GSImageSampler/share/GSImageSampler/config/: front_down_calib.json  right_calib.json
ros2_ws/install/lio_sam/include/lio_sam/: FeatureExtraction.h  ImageProjection.h  ImuPreintegration.h
ros2_ws/install/lio_sam/include/lio_sam/lio_sam/msg/detail/: cloud_info__struct.h
ros2_ws/install/lio_sam/include/lio_sam/utils/: ParamServer.h  QoS.h  imuUtils.h  pclType.h  utils.h
ros2_ws/install/lio_sam/lib/lio_sam/: lio_sam_featureExtraction  lio_sam_imageProjection  lio_sam_imuPreintegration  lio_sam_mapOptimization
ros2_ws/install/lio_sam/share/ament_index/resource_index/parent_prefix_path/: lio_sam
ros2_ws/install/lio_sam/share/lio_sam/: local_setup.sh  package.dsv  package.sh
ros2_ws/install/lio_sam/share/lio_sam/cmake/: export_lio_sam__rosidl_generator_cExport-release.cmake  export_lio_sam__rosidl_generator_cExport.cmake  export_lio_sam__rosidl_generator_cppExport.cmake  export_lio_sam__rosidl_typesupport_fastrtps_cExport-release.cmake  export_lio_sam__rosidl_typesupport_fastrtps_cExport.cmake  export_lio_sam__rosidl_typesupport_fastrtps_cppExport.cmake  lio_sam__rosidl_typesupport_cExport-release.cmake  lio_sam__rosidl_typesupport_cppExport.cmake  lio_sam__rosidl_typesupport_introspection_cExport-release.cmake  lio_sam__rosidl_typesupport_introspection_cExport.cmake  lio_sam__rosidl_typesupport_introspection_cppExport.cmake
ros2_ws/install/lio_sam/share/lio_sam/config/: params.yaml  robot.urdf.xacro
ros2_ws/log/: latest_build
ros2_ws/src/GSImageSampler/: package.xml  setup.cfg  setup.py
ros2_ws/src/GSImageSampler/GSImageSampler/: kimm_sampler.py
ros2_ws/src/GSImageSampler/config/: TF.txt  back_calib.json  front_up_calib.json  left_calib.json
ros2_ws/src/GSImageSampler/scripts/: preprocessing.py  test.py
ros2_ws/src/LIO-SAM-ROS2-REFACTORING/: CMakeLists.txt
ros2_ws/src/LIO-SAM-ROS2-REFACTORING/config/: params.yaml  rviz2.rviz
ros2_ws/src/LIO-SAM-ROS2-REFACTORING/include/lio_sam/: MapOptimization.h  TransformFusion.h
ros2_ws/src/LIO-SAM-ROS2-REFACTORING/include/lio_sam/utils/: gpsUtils.h  gtsamUtils.h  pclUtils.h
ros2_ws/src/LIO-SAM-ROS2-REFACTORING/launch/: run.launch.py
ros2_ws/src/LIO-SAM-ROS2-REFACTORING/src/components/: FeatureExtraction.cpp  ImageProjection.cpp  ImuPreintegration.cpp  MOInitializer.cpp  MOLoopClosure.cpp  MOPublish.cpp  MOVisualize.cpp  MapOptmization.cpp  TransformFusion.cpp
ros2_ws/src/LIO-SAM-ROS2-REFACTORING/src/nodes/: nodeFE.cpp  nodeIP.cpp  nodeIPI.cpp  nodeMO.cpp
ros2_ws/src/LIO-SAM-ROS2-REFACTORING/src/utils/: QoS.cpp  gtsamUtils.cpp  pclUtils.cpp
scripts/: alias.example  colcon.sh  gs.sh  ros.sh  ros2.sh
